--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.29.0
 azure-keyvault-secrets==4.7.0
 azure-identity==1.15.0
 snowflake-connector-python==3.6.0
-cryptography==41.0.8
+cryptography>=41.0.0
 pandas==2.1.4
 python-dotenv==1.0.0
 pytest==7.4.3
